--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   flutter_bloc: ^9.1.1
   intl: ^0.20.2
   path: ^1.9.1
+  shared_preferences: ^2.5.3
   sqflite: ^2.4.2
   syncfusion_flutter_calendar: ^29.2.4
 
